Salon Allure v4.0.2 - FIX - content/bookings: Update the `Bookings Count` after adding OR deleting a booking + Change the Client Edit modal title and hide the "Delete link" when adding a new client + Clip overflow text on booking summaries.

--- a/app/content/bookings/bookings.html.css
+++ b/app/content/bookings/bookings.html.css
@@ -196,6 +196,7 @@ main {
   font-size: 0.75em;
   padding: 0.25em 0.5em;
   cursor: pointer;
+  overflow: hidden;
   position: absolute;
   width: 100%;
   z-index: 2;
